# lintersmagic

./: .gitignore  README.md  Todo  lintersmagic.py  pyproject.toml
.github/workflows/: workflow.yml
tests/: test_pycodestyle_magic.py
