[tool.poetry]
name = "lintersmagic"
version = "0.1.0"
description = "A package to include linters in Databricks notebooks: flake8 and pycodestyle"
authors = ["Bedrock streaming"]

[tool.poetry.dependencies]
python = "^3.8"
pycodestyle = "2.8.0"
ipython = "7.17"
flake8 = "^4.0.1"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]
unittest = "^0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
